--- a/Module01/index.html
+++ b/Module01/index.html
@@ -7,8 +7,8 @@
 <body>
     <header>
         <nav> <p>
-            <a href="img\image.png">LIFESTYLE</a>
-            <a href="img\Image3.png">PHOTODIARY</a>
+            <a href=" ">LIFESTYLE</a>
+            <a href=" ">PHOTODIARY</a>
             <span class="inline-el">MUSIC</span>
             <span class="inline-el">TRAVEL</span></p>
         </nav>
