--- a/Module01/index.html
+++ b/Module01/index.html
@@ -9,8 +9,8 @@
         <nav> <p>
             <a href=" ">LIFESTYLE</a>
             <a href=" ">PHOTODIARY</a>
-            <span class="inline-el">MUSIC</span>
-            <span class="inline-el">TRAVEL</span></p>
+            <a href=" ">MUSIC</a>
+            <a href=" ">TRAVEL</a></p>
         </nav>
     </header>
         <section>
