--- a/Module01/index.html
+++ b/Module01/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <nav> <p>
-            <a href="/html/">LIFESTYLE</a>
+            <a href=" ">LIFESTYLE</a>
             <a href=" ">PHOTODIARY</a>
             <a href=" ">MUSIC</a>
             <a href=" ">TRAVEL</a></p>
