--- a/html-css/Module04/index.html
+++ b/html-css/Module04/index.html
@@ -29,7 +29,7 @@
                         <img src="img/img1.jpg" alt="Blue Tshirt">
                     <div class="underblock clearfix">
                         <div class="name">Blue tshirt</div>
-                        <div class="price">$26</div>
+                        <div class="prc">$26</div>
                     </div>
                     </div>
                                     
@@ -37,7 +37,7 @@
                         <img src="img/img2.jpg" alt="Woman Shirt">
                     <div class="underblock clearfix">
                         <div class="name">Woman shirt</div>
-                        <div class="price">$31</div>
+                        <div class="prc">$31</div>
                      </div>
                     </div>
 
@@ -46,7 +46,7 @@
                         <img src="img/img3.jpg" alt="Yellow Tshirt">
                     <div class="underblock claerfix">
                         <div class="name">Yellow tshirt</div>
-                        <div class="price">$21</div>
+                        <div class="prc">$21</div>
                     </div>
                     </div>
                         
@@ -54,7 +54,7 @@
                         <img src="img/img4.jpg" alt="Cool Lingerie" width="255" height="282">
                     <div class="underblock clearfix">
                         <div class="name">Cool lingerie</div>
-                        <div class="price">$56</div>
+                        <div class="prc">$56</div>
                     </div>
                     </div>
                     <div style="clear: both;" class="ln"></div>
@@ -64,28 +64,28 @@
                         <img src="img/img5.jpg" alt="Blue Tshirt">
                     <div class="underblock clearfix">
                         <div class="name">Blue tshirt</div>
-                        <div class="price">$26</div>
+                        <div class="prc">$26</div>
                     </div>
                     </div>
                     <div class="shop-item 6">
                         <img src="img/img6.jpg" alt="Woman Shirt">
                     <div class="underblock clearfix">
                         <div class="name">Woman shirt</div>
-                        <div class="price">$31</div>
+                        <div class="prc">$31</div>
                      </div>
                     </div>
                     <div class="shop-item 7">
                         <img src="img/img7.jpg" alt="Yellow Tshirt">
                     <div class="underblock clearfix">
                         <div class="name">Yellow tshirt</div>
-                        <div class="price">$21</div>
+                        <div class="prc">$21</div>
                     </div>
                     </div>
                     <div class="shop-item 8">
                         <img src="img/img8.jpg" alt="Cool Lingerie">
                     <div class="underblock clearfix">
                         <div class="name">Cool lingerie</div>
-                        <div class="price">$56</div>
+                        <div class="prc">$56</div>
                     </div>
                     </div>
                 </div>               
