--- a/html-css/Module05/index.html
+++ b/html-css/Module05/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-        <div class="logo_wrapper"><p class="logo">Mart</p></div>
-        <nav class="navigation">
+        <div><p class="logo">Mart</p></div>
+        <nav>
             <ul class="menu">
                 <li class="menu-item"><a href="#" class="submenu">Home</a></li>
                 <li class="menu-item"><a href="#">About us</a></li>
@@ -20,7 +19,6 @@
                 <li class="menu-item"><a href="#">Contact us</a></li>
             </ul>
         </nav>
-    </div>
     </header>
     
     <main>
