--- a/html-css/Module05/index.html
+++ b/html-css/Module05/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <div><p class="logo">Mart</p></div>
-        <nav>
+        <div class="container">
+        <div class="logo_wrapper"><p class="logo">Mart</p></div>
+        <nav class="navigation">
             <ul class="menu">
                 <li class="menu-item"><a href="#" class="submenu">Home</a></li>
                 <li class="menu-item"><a href="#">About us</a></li>
@@ -19,6 +20,7 @@
                 <li class="menu-item"><a href="#">Contact us</a></li>
             </ul>
         </nav>
+    </div>
     </header>
     
     <main>
@@ -37,10 +39,10 @@
             </section>
             <section class="shops">
                 <div class="head"><h2>New collection</h2></div>
-                <ul class="shop">
-                    <li class="shop-item_1">
-                        <img class="position n1" src="img/image2.jpg" alt="">
-                            <ul class="subpos_1">
+                <div class="container"><ul class="shop">
+                    <li class="shop-item">
+                        <img class="position" src="img/image2.jpg" alt="">
+                            <ul class="subpos">
                                 <li class="subpos_item">
                             <div class="hov">
                                 <button class="btn_1">
@@ -59,9 +61,9 @@
                     <div class="name n1">Blue Tshirt</div>
                     <div class="price n1">$26</div>
                     </li>
-                    <li class="shop-item_2">
-                        <img class="position n2" src="img/image3.jpg" alt="">
-                            <ul class="subpos_2">
+                    <li class="shop-item">
+                        <img class="position" src="img/image3.jpg" alt="">
+                            <ul class="subpos">
                                 <li class="subpos_item">
                                     <div class="hov">
                                         <button class="btn_1">
@@ -77,12 +79,12 @@
                                     </div>
                                 </li>
                             </ul>
-                    <div class="name n2">Woman Shirt</div>
-                    <div class="price n2">$31</div>
+                    <div class="name">Woman Shirt</div>
+                    <div class="price">$31</div>
                     </li>
-                    <li class="shop-item_3">
-                        <img class="position n3" src="img/image4.jpg" alt="">
-                        <ul class="subpos_3">
+                    <li class="shop-item">
+                        <img class="position" src="img/image4.jpg" alt="">
+                        <ul class="subpos">
                             <li class="subpos_item">
                                 <div class="hov">
                                     <button class="btn_1">
@@ -98,12 +100,12 @@
                                         </div>
                             </li>
                         </ul>
-                        <div class="name n3">Yellow Tshirt</div>
-                        <div class="price n3">$21</div>
+                        <div class="name">Yellow Tshirt</div>
+                        <div class="price">$21</div>
                     </li>
-                    <li class="shop-item_4">
-                        <img class="position n4" src="img/image5.jpg" alt="">
-                        <ul class="subpos_4">
+                    <li class="shop-item">
+                        <img class="position" src="img/image5.jpg" alt="">
+                        <ul class="subpos">
                             <li class="subpos_item">
                                 <div class="hov">
                                     <button class="btn_1">
@@ -119,10 +121,10 @@
                                 </div>
                             </li>
                         </ul>
-                        <div class="name n4">Cool Lingerie</div>
-                        <div class="price n4">$56</div>
+                        <div class="name">Cool Lingerie</div>
+                        <div class="price">$56</div>
                     </li>
-                </ul>
+                </ul></div>
             </section>
         </article>
     </main>
