--- a/html-css/Module08/index.html
+++ b/html-css/Module08/index.html
@@ -14,13 +14,15 @@
            <div class="container">
                <div class="fon">
                     <nav class="navigation">
-                       <div class="log"><a href="#">Log in</a></div>
-                       <div class="log"><a href="#">Sign up</a></div>
-                       <div class="logo"><h2>Urlaubglück</h2></div>
-                   </nav>
+                            <ul class="nav">
+                                <li class="log"><a href="#">Log in</a></li>
+                                <li class="log"><a href="#">Sign up</a></li>
+                                <li class="logo"><h2>Urlaubglück</h2></li>
+                            </ul>
+                            </nav>
                    <div class="head">
                    <h3>Share your <br> holiday dreams</h3>
-                   <p class="about">And find the perfect partner <br> to fullfil it</p>
+                   <p class="about">And find the perfect partner to fullfil it</p>
                    <input class="button" type="submit" value="Find your holiday partner"></div>
                </div>
            </div>
