--- a/html-css/Module10/index.html
+++ b/html-css/Module10/index.html
@@ -17,11 +17,11 @@
             <div class="site-nav">
                 <nav class="nav-menu">
                     <ul class="nav-menu__item">
-                        <li><a class="nav-menu__link" href="#">About</a></li>
-                        <li><a class="nav-menu__link" href="#">Service</a></li>
-                        <li><a class="nav-menu__link" href="#">Work</a></li>
-                        <li><a class="nav-menu__link" href="#">Blog</a></li>
-                        <li><a class="nav-menu__link" href="#">Contact</a></li>
+                        <li><a class="nav-menu__link line" href="#">About</a></li>
+                        <li><a class="nav-menu__link line" href="#">Service</a></li>
+                        <li><a class="nav-menu__link line" href="#">Work</a></li>
+                        <li><a class="nav-menu__link line" href="#">Blog</a></li>
+                        <li><a class="nav-menu__link line" href="#">Contact</a></li>
                         <li><a class="nav-menu__link" href="#">
                             <svg><use href="img/icon-defs.svg#icon-shopping"></use></svg>   
                         </a></li>
