--- a/html-css/Module09/index.html
+++ b/html-css/Module09/index.html
@@ -11,106 +11,90 @@
 </head>
 <body>
     <header>
+        <div class="fon">
            <div class="container">
+                <div class="row menu">
+                    <div class="col-12 col-md-5 col-lg-4 order-md-2 menu_id offset-md-3 offset-lg-4">
+                        <nav class="nav">
+                        <a class="log" href="#">Log in</a>
+                        <a class="log" href="#">Sign up</a>
+                        </nav>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-4 order-md-1 menu_id ">
+                        <a class="logo" href="#">Urlaubglück</a>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="fon">
-                                <div class="row menu">
-                                    <div class="col-12 col-md-5 col-lg-4 order-md-2 menu_id offset-md-3 offset-lg-4">
-                                        <nav class="nav">
-                                        <a class="log" href="#">Log in</a>
-                                        <a class="log" href="#">Sign up</a>
-                                        </nav>
-                                    </div>
-                                    <div class="col-12 col-md-4 col-lg-4 order-md-1 menu_id ">
-                                        <a class="logo" href="#">Urlaubglück</a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="head">
-                                            <h3>Share your <br> holiday dreams</h3>
-                                            <p class="about">And find the perfect partner  to fullfil it</p>
-                                            <input class="button" type="submit" value="Find your holiday partner">
-                                        </div>
-                                    </div>
-                                </div>
-                            
+                        <div class="head">
+                            <h3>Share your <br> holiday dreams</h3>
+                            <p class="about">And find the perfect partner  to fullfil it</p>
+                            <input class="button" type="submit" value="Find your holiday partner">
                         </div>
                     </div>
                 </div>
-            </div>                             
+            </div>
+        </div>                             
     </header>
 
     <main>
         <div class="container">
-            <div class="row ">
-                <div class="col-12 head">
-                    <h1>Meet a partner for your best holiday</h1>
-                </div>
-                <div class="col-12 team">
-                    <div class="row">
-                        <div class="col-12 col-md-6 col-lg-3 order-md-1 order-lg-1">
-                            <div class="person">
-                                <div class="icon">
-                                    <img class="face" src="img/foto1.png" alt="">
-                                    <img class="icon_fon" src="img/foto1_1.png" alt="">
-                                    <img class="icon_id" src="img/foto1_2.png" alt="">
-                                </div>
-                                    <h4>Bradley Hunter</h4>
-                                    <p class="some">Based in Chicago. I love playing <br> tennis and loud music.</p>
-                            </div>
+            <h1 class="head">Meet a partner for your best holiday</h1>
+            <div class="row team">
+                <div class="col-12 col-md-6 col-lg-3 order-md-1 order-lg-1">
+                    <div class="person">
+                        <div class="icon">
+                            <img class="face" src="img/foto1.png" alt="">
+                            <img class="icon_fon" src="img/foto1_1.png" alt="">
+                            <img class="icon_id" src="img/foto1_2.png" alt="">
                         </div>
-                        <div class="col-12 col-md-6 col-lg-3 order-md-3 order-lg-3">
-                            <div class="person">
-                                <div class="icon">
-                                    <img class="face" src="img/foto2.png" alt="">
-                                    <img class="icon_fon" src="img/foto2_1.png" alt="">
-                                    <img class="icon_id" src="img/foto2_2.png" alt="">
-                                </div>
-                                    <h4>Lucas Marsha</h4>
-                                    <p class="some">I get my inspiration from nature <br> and objects around me. I have a <br> passion to colours. typography <br> and skateboards.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6 col-lg-3 order-md-2 order-lg-2">
-                            <div class="person">
-                                <div class="icon">
-                                    <img class="face" src="img/foto3.png" alt="">
-                                    <img class="icon_fon" src="img/foto3_1.png" alt="">
-                                    <img class="icon_id" src="img/foto3_2.png" alt="">
-                                </div>
-                                    <h4>Heather Walker</h4>
-                                    <p class="some">I'm a happy person that loves cats <br> and climbing on mountains.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6 col-lg-3 order-md-4">
-                            <div class="person">
-                                <div class="icon">
-                                    <img class="face" src="img/foto4.png" alt="">
-                                    <img class="icon_fon" src="img/foto4_1.png" alt="">
-                                    <img class="icon_id" src="img/foto4_2.png" alt="">
-                                </div>
-                                    <h4>Bradley Hunter</h4>
-                                    <p class="some">Based in Chicago. I love playing <br> tennis and loud music.</p>
-                            </div>
-                        </div>
+                            <h4>Bradley Hunter</h4>
+                            <p class="some">Based in Chicago. I love playing <br> tennis and loud music.</p>
                     </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-3 order-md-3 order-lg-3">
+                    <div class="person">
+                        <div class="icon">
+                            <img class="face" src="img/foto2.png" alt="">
+                            <img class="icon_fon" src="img/foto2_1.png" alt="">
+                            <img class="icon_id" src="img/foto2_2.png" alt="">
+                        </div>
+                            <h4>Lucas Marsha</h4>
+                            <p class="some">I get my inspiration from nature <br> and objects around me. I have a <br> passion to colours. typography <br> and skateboards.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 order-md-2 order-lg-2">
+                    <div class="person">
+                        <div class="icon">
+                            <img class="face" src="img/foto3.png" alt="">
+                            <img class="icon_fon" src="img/foto3_1.png" alt="">
+                            <img class="icon_id" src="img/foto3_2.png" alt="">
+                        </div>
+                            <h4>Heather Walker</h4>
+                            <p class="some">I'm a happy person that loves cats <br> and climbing on mountains.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 order-md-4">
+                    <div class="person">
+                        <div class="icon">
+                            <img class="face" src="img/foto4.png" alt="">
+                            <img class="icon_fon" src="img/foto4_1.png" alt="">
+                            <img class="icon_id" src="img/foto4_2.png" alt="">
+                        </div>
+                            <h4>Bradley Hunter</h4>
+                            <p class="some">Based in Chicago. I love playing <br> tennis and loud music.</p>
+                    </div>
+                </div>        
             </div>
-        </div>   
+        </div>
     </main>
 
     <footer>
         <div class="container">
-            <div class="row end">
-                <div class="col-12 col-md-4 col-lg-4 offset-md-4 offset-lg-4">
-                    <div class="footer center-block">
-                        <input class="foot" type="submit" value="See other partners">
-                    </div>
-                </div>
+            <div class="footer center-block end">
+                <input class="foot" type="submit" value="See other partners">
             </div>
         </div>
-        
     </footer>
 </body>
 </html>
