--- a/Project/index.html
+++ b/Project/index.html
@@ -102,7 +102,7 @@
             </div>
             
         </section>
-        <section>
+        <section class="programm-main">
             <h2 class="programm">[Программа курса]</h2>
             <img class="programm-img" src="img/progpamm.png" alt="">
             <div class="programm-container">
